# CPLibrary

./: .gitignore  CMakeLists.txt  Documentation.txt  LICENSE.txt  README.md
CPL V.1.0/include/: Audio.h  CPLibrary.h  Engine.h  KeyInputs.h
CPL V.1.0/include/freetype2/freetype/config/: ftoption.h
CPL V.1.0/include/shape2D/: Line.h  PointLight.h  Rectangle.h  ScreenQuad.h  Texture2D.h  Tilemap.h
CPL V.1.0/include/shape3D/: Cube.h  CubeMap.h  DirectionalLight.h  Frustum.h  PlaneTex.h
CPL V.1.0/include/util/: OpenGLDebug.h  ScopedTimer.h
CPL V.1.0/lib/cmake/CPLibrary/: CPLibraryConfig.cmake  CPLibraryTargets-noconfig.cmake  CPLibraryTargets.cmake
CPL V.1.0/lib/cmake/freetype/: freetype-config.cmake
CPL V.1.0/lib/pkgconfig/: freetype2.pc
CPLibrary/: Audio.cpp  Audio.h  CMakeLists.txt  CPL.cpp  CPL.h  CPLibrary.h  Colors.h  Engine.cpp  Engine.h  Shader.cpp  Shader.h  Text.cpp  Text.h
CPLibrary/cmake/: CPLibraryConfig.cmake.in
CPLibrary/include/: CPL.h  Engine.h  Screenshot.h  Shader.h
CPLibrary/include/shape2D/: ParticleSystem.h  Texture2D.h  Triangle.h
CPLibrary/include/shape3D/: Frustum.h  Ray.h  ShadowMap.h  Sphere.h
CPLibrary/include/timer/: TimerManager.h
CPLibrary/include/util/: Logging.h  Profiler.h  ScopedTimer.h  StackProfiler.h
CPLibrary/shaders/: lightShader.frag  lightShader.vert  screen.vert
CPLibrary/shapes2D/: Circle.cpp  Circle.h  Line.cpp  ParticleSystem.cpp  ParticleSystem.h  PointLight.h  Rectangle.cpp  Rectangle.h  ScreenQuad.cpp  ScreenQuad.h  Texture2D.cpp  Texture2D.h  Tilemap.cpp  Tilemap.h  Triangle.cpp  Triangle.h
CPLibrary/shapes3D/: Cube.cpp  Cube.h  CubeMap.cpp  CubeMap.h  CubeTex.cpp  CubeTex.h  DirectionalLight.h  Frustum.h  PlaneTex.cpp  PlaneTex.h  PointLight3D.h  ShadowMap.cpp  ShadowMap.h  Sphere.cpp  Sphere.h
CPLibrary/src/: Audio.cpp  CPL.cpp  Engine.cpp  Screenshot.cpp  Shader.cpp  Text.cpp
CPLibrary/src/shape2D/: Circle.cpp  Line.cpp  ParticleSystem.cpp  Rectangle.cpp  ScreenQuad.cpp  Texture2D.cpp  Tilemap.cpp  Triangle.cpp
CPLibrary/src/shape3D/: Cube.cpp  CubeMap.cpp  CubeTex.cpp  PlaneTex.cpp  Ray.cpp  ShadowMap.cpp  Sphere.cpp
CPLibrary/src/timer/: TimerManager.cpp
CPLibrary/src/util/: Profiler.cpp
CPLibrary/timers/: TimerManager.cpp
CPLibrary_2D/: Audio.cpp  CPL.cpp  Shader.cpp
CPLibrary_2D+3D/: Audio.cpp  CPL.cpp  CPL.h  CPLibrary.h  Engine.cpp  Engine.h  Logging.h  Shader.cpp  Shader.h  Text.cpp  Text.h
CPLibrary_2D+3D/shapes2D/: Circle.cpp  GlobalLight.h  Line.h  Rectangle.cpp  Rectangle.h  ScreenQuad.cpp  Texture2D.cpp  Texture2D.h  Tilemap.cpp  Triangle.cpp
CPLibrary_2D+3D/shapes3D/: Cube.cpp  Cube.h  CubeMap.cpp  CubeMap.h  CubeTex.cpp  CubeTex.h  DirectionalLight.h  Frustum.h
CPLibrary_2D+3D/timers/: Timer.h  TimerManager.cpp
CPLibrary_2D/shapes2D/: PointLight.h  Rectangle.cpp  ScreenQuad.cpp  Tilemap.cpp  Tilemap.h
CPLibrary_2D/timers/: TimerManager.h
assets/shaders/: cubeMapShader.vert  cubeTexShader.frag  depthShader.frag  depthShader.vert  lightCubeShader.frag  lightCubeTexShader.frag  lightCubeTexShader.vert  lightShader_web.frag  lightTexture.frag  lightTexture.vert  lightTexture_web.frag  lightTexture_web.vert  screen.frag  screen_web.frag  screen_web.vert  shader_web.frag  text_web.vert  texture_web.vert
assets/shaders/default/frag/: cubeShader.frag  lightCubeTexShader.frag  lightShader.frag  zPrepass.frag
assets/shaders/default/frag/3D/: lightShape.frag  shape.frag  zPrepass.frag
assets/shaders/default/vert/: cubeShader.vert  cubeTexShader.vert  depthShader.vert  lightCubeShader.vert
assets/shaders/default/vert/3D/: shape.vert
assets/shaders/web/frag/: text_web.frag  texture_web.frag
assets/shaders/web/vert/: lightShader_web.vert  shader_web.vert
example2D/: main.cpp
example3D/: main.cpp
src/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Game.cpp  Game.h  TextureLoader.cpp  TextureLoader.h  WorldGen.cpp  WorldGen.h  main.cpp
